Updated Fusion project files.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = fusion
-summary = "Fusion is a Neutron extension that enables WAN orchestration for OpenStack"
+summary = "Multi-cloud WAN registry and broker"
 description-file =
     README.rst
 author = OpenStack
